script de reprise d'un mois